Database method updates.